<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accept_or_deny">%1$s shared the album %2$s with you.</string>
    <string name="actionbar_overflow_item_desc">More options</string>
    <string name="add_automatically_alert_msg">Add photos from \"%1$s\" to this album automatically?</string>
    <string name="add_automatically_alert_title">Add photos automatically</string>
    <string name="add_secret_ensure_title">Hide</string>
    <string name="add_sharer">Add member</string>
    <string name="add_to_album">Add to album</string>
    <string name="add_to_album_bulk_result">Error (%d)</string>
    <string name="add_to_album_exist">This photo already exists</string>
    <string name="add_to_album_failed">"Couldn't add to album"</string>
    <string name="add_to_album_failed_with_reason">"Can't add to album. %1$s."</string>
    <string name="add_to_album_success">Added to album</string>
    <string name="add_to_album_tip">Cloud photos</string>
    <string name="add_to_favorites_failed">"Couldn't add to favorites"</string>
    <string name="add_to_secret_exist">This item already exists in hidden album</string>
    <string name="add_to_secret_fail">"Couldn't add to hidden album"</string>
    <string name="add_to_secret_failed_with_reason">"Can't add to hidden album. %1$s."</string>
    <string name="add_to_secret_successful">Added to hidden album</string>
    <string name="add_to_share_album_not_delete">"Can't delete photo from Shared Album"</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="added_to_favorites_desc">Added to favorites</string>
    <string name="added_to_favorites_tip">Added to \"Favorites\" album</string>
    <string name="adding">Adding…</string>
    <string name="adding_recipients">Adding recipients…</string>
    <string name="adding_to_album">Adding photos…</string>
    <string name="adding_to_favorites">Adding to favorites…</string>
    <string name="adjust_brightness">Brightness</string>
    <string name="adjust_contrast">Contrast</string>
    <string name="adjust_saturation">Saturation</string>
    <string name="adjust_sharpen">Sharpen</string>
    <string name="adjust_vignette">Vignette</string>
    <string name="afternoon">PM</string>
    <string name="agreement_agree">Accept</string>
    <string name="agreement_optional_tip">(Optional)</string>
    <string name="agreement_quit">Exit</string>
    <string name="agreement_required_tip">(Mandatory)</string>
    <string name="agreement_summary">Legal documents</string>
    <string name="ai_album_open_switch_button_title">Start analyzing photos</string>
    <string name="ai_album_requesting_title">AI algorithm is still processing your photos. Come back in a while.</string>
    <string name="ai_album_setting_key_word">Search for photos</string>
    <string name="ai_album_setting_sub_title">Allow AI algorithm to identify people, places, and objects on your photos so you could find them faster.</string>
    <string name="ai_album_setting_title">Identify objects on photos</string>
    <string name="album_already_exists_check">View</string>
    <string name="album_already_exists_msg">Album \"%s\" already exists</string>
    <string name="album_already_forced_top">Already on top</string>
    <string name="album_bluetooth">Bluetooth</string>
    <string name="album_camera_name">Camera</string>
    <string name="album_cloud_list_page_title">Manage synced albums</string>
    <string name="album_creative">My edited photos</string>
    <string name="album_detail_page_empty">No photos or videos</string>
    <string name="album_download">Downloads</string>
    <string name="album_faces_name">People</string>
    <string name="album_favorites_name">Favorites</string>
    <string name="album_from_format">From %s</string>
    <string name="album_hidden_item_button_title">Unhide</string>
    <string name="album_hidden_page_title">Hide</string>
    <string name="album_jump_failed">Wait until albums are synced with the cloud and try again</string>
    <string name="album_member">Album members %s</string>
    <string name="album_midrop">Mi Drop</string>
    <string name="album_name">Album name</string>
    <string name="album_name_locations">Locations</string>
    <string name="album_name_people">People</string>
    <string name="album_name_recent_discovery">Recent</string>
    <string name="album_name_tags">Tags</string>
    <string name="album_notes">Notes</string>
    <string name="album_others_share_baby_info_format">Baby album from %s</string>
    <string name="album_others_share_info_format">From %s</string>
    <string name="album_owner_share">Shared</string>
    <string name="album_page_empty">Empty</string>
    <string name="album_page_label">Albums</string>
    <string name="album_pano_name">Panoramas</string>
    <string name="album_quota_fulfiled">Too many albums. Delete some albums and try again.</string>
    <string name="album_scanner">Scanner</string>
    <string name="album_screen_recorder">Screen recorder</string>
    <string name="album_screenshot_name">Screenshots</string>
    <string name="album_share_exit_confirm">Exit this album?</string>
    <string name="album_share_kicked">%1$s is closed</string>
    <string name="album_share_stat_content">Invitations</string>
    <string name="album_share_subtitle_accepting">Accepting invitation from %1$s…</string>
    <string name="album_share_subtitle_denying">Ignoring invitation from %1$s…</string>
    <string name="album_share_subtitle_invited">Shared by %1$s</string>
    <string name="album_show_local_only">Only show local albums</string>
    <string name="album_show_local_only_summary">Turn on to view and delete photos on your device only</string>
    <string name="auto_download_media_title">Download photos from Xiaomi Cloud automatically</string>
    <string name="backup_automatically_summary">Sync photos and videos from all devices to Xiaomi Cloud. Thus, you can conveniently browse, sort, edit, and share photos and videos on all your devices.</string>
    <string name="backup_automatically_title">Sync automatically</string>
    <string name="backup_only_in_wifi">Only use Wi‑Fi to sync photos and videos</string>
    <string name="backup_only_in_wifi_summary">Never use mobile data to sync photos or videos</string>
    <string name="browse_category_title">Browse</string>
    <string name="cloud_settings">Sync</string>
    <string name="date_picker_label_day" />
    <string name="date_picker_label_month" />
    <string name="date_picker_label_year" />
    <string name="download_type_title">Download quality</string>
    <string name="enable_face_album_summary">Automatically sort photos by the people that are in them</string>
    <string name="enable_face_album_title">Sort by people</string>
    <string name="enable_midrop">Turn on</string>
    <string name="generate_story_summary">MIUI will analyze your photos and create memories. Turn this feature off to stop creating memories.</string>
    <string name="generate_story_title">Memories</string>
    <string name="image_selection_summary">MIUI will analyze similar photos and mark best shots for you. Turn this feature off to remove marks from photos.</string>
    <string name="image_selection_title">Select best photo</string>
    <string name="impunity_declaration_settings">Internet connection notification</string>
    <string name="impunity_declaration_summary">Show internet connection notification every time you open Gallery</string>
    <string name="mi_drop">Mi Share</string>
    <string name="movie_content_describe_delete">Delete photos</string>
    <string name="movie_content_describe_play">Play</string>
    <string name="movie_preview_btn">Preview</string>
    <string name="movie_return">Back</string>
    <string name="movie_save">Save</string>
    <string name="movie_video_long">Longer video</string>
    <string name="movie_video_short">10s video</string>
    <string name="other_settings">Additional settings</string>
    <string name="photo_editor_talkback_redo">Redo</string>
    <string name="photo_editor_talkback_undo">Undo</string>
    <string name="recommend_category_title">"Gallery's picks"</string>
    <string name="screen_editor_btn_delete">Delete</string>
    <string name="screen_editor_btn_save">Save</string>
    <string name="send_files_to">Send items to</string>
    <string name="show_cloud_albumlist_summary">Manage the albums you sync with the cloud</string>
    <string name="show_cloud_albumlist_title">@string/album_cloud_list_page_title</string>
    <string name="show_hidden_album_title">View hidden albums</string>
    <string name="slideshow_interval_dialog_title">Enter interval</string>
    <string name="slideshow_interval_title">Show each slide for</string>
    <string name="throwing_print">Print</string>
    <string name="throwing_screen">Cast</string>
    <string name="time_picker_label_hour">H</string>
    <string name="time_picker_label_minute">M</string>
    <string name="tips_prompt_enable_midrop">Share files with devices nearby</string>
    <string name="trash_bin">Trash bin</string>
    <string name="trash_bin_summary">Browse backed up photos which were deleted recently</string>
    <string name="user_agreement4">Privacy Policy</string>
</resources>