<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rl_send_to" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/send_to_margin_start" android:layout_marginEnd="@dimen/send_to_margin_end">
        <TextView android:textSize="@dimen/send_file_to_textsize" android:textStyle="bold" android:textColor="@color/textcolor_file_send_to" android:ellipsize="end" android:gravity="start" android:id="@id/tv_send_file_to" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send_files_to" android:maxLines="2" android:layout_centerVertical="true" android:textAlignment="viewStart" android:layout_marginEnd="2.0dip" android:layout_toStartOf="@id/iv_printer" android:layout_alignParentStart="true" />
        <ImageButton android:id="@id/iv_printer" android:background="@drawable/bg_mishare_tranfer_btn" android:layout_width="@dimen/transfer_view_btn_width" android:layout_height="@dimen/transfer_view_btn_height" android:src="@drawable/bg_ic_printer" android:layout_centerVertical="true" android:contentDescription="@string/throwing_print" android:layout_marginEnd="@dimen/btn_printer_margin_end" android:layout_toStartOf="@id/iv_throwing_screen" />
        <ImageButton android:id="@id/iv_throwing_screen" android:background="@drawable/bg_mishare_tranfer_btn" android:layout_width="@dimen/transfer_view_btn_width" android:layout_height="@dimen/transfer_view_btn_height" android:src="@drawable/bg_ic_screen" android:layout_centerVertical="true" android:contentDescription="@string/throwing_screen" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View android:id="@id/view_middle_divider" android:background="#1a000000" android:layout_width="fill_parent" android:layout_height="@dimen/transfer_view_middle_divider_height" android:layout_marginTop="@dimen/transfer_view_middle_divider_margin_top" android:layout_below="@id/rl_send_to" android:layout_marginStart="@dimen/transfer_view_middle_divider_margin_start" android:layout_marginEnd="@dimen/transfer_view_middle_divider_margin_end" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/lv_scanned_device" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/device_list_height" android:layout_marginTop="@dimen/device_list_margin_top" android:divider="@android:color/transparent" android:layout_below="@id/rl_send_to" />
    <RelativeLayout android:id="@id/rl_prompt_switch" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/prompt_switch_margin_top" android:minHeight="@dimen/prompt_switch_height" android:layout_below="@id/view_middle_divider" android:layout_marginStart="@dimen/prompt_switch_margin_start" android:layout_marginEnd="@dimen/prompt_switch_margin_end">
        <ImageView android:id="@id/ic_midrop_enable" android:layout_width="@dimen/size_scanned_device" android:layout_height="@dimen/size_scanned_device" android:src="@drawable/ic_transmission_not_enable" android:layout_centerVertical="true" android:contentDescription="@string/mi_drop" android:layout_marginEnd="@dimen/icon_enable_mishare_margin_top" />
        <TextView android:textSize="@dimen/prompt_switch_tips_textsize" android:textColor="@color/textcolor_enable_midrop_tips" android:ellipsize="end" android:id="@id/tv_prompt_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_prompt_enable_midrop" android:maxLines="3" android:layout_centerVertical="true" android:lineSpacingExtra="2.0dip" android:layout_toStartOf="@id/btn_enable_midrop" android:layout_toEndOf="@id/ic_midrop_enable" />
        <TextView android:textSize="@dimen/textsize_btn_enable_mishare" android:textColor="@color/textcolor_enable_midrop" android:ellipsize="end" android:gravity="center" android:id="@id/btn_enable_midrop" android:background="@drawable/bg_mishare_tranfer_btn" android:paddingLeft="@dimen/btn_enable_mishare_padding" android:paddingRight="@dimen/btn_enable_mishare_padding" android:layout_width="wrap_content" android:layout_height="@dimen/transfer_view_btn_height" android:text="@string/enable_midrop" android:layout_centerVertical="true" android:layout_marginStart="@dimen/btn_enable_mishare_margin_start" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View android:id="@id/bottom_divider" android:background="@color/bg_bottom_divider" android:layout_width="fill_parent" android:layout_height="@dimen/transfer_view_middle_divider_height" android:layout_marginTop="@dimen/bottom_divider_margin_top" android:layout_below="@id/rl_prompt_switch" android:layout_marginStart="@dimen/bottom_divider_margin_start" android:layout_marginEnd="@dimen/bottom_divider_margin_end" />
</RelativeLayout>