<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/divide_bottom" android:layout_width="fill_parent" android:layout_height="@dimen/movie_divide_height" app:layout_constrainedHeight="true" app:layout_constraintTop_toTopOf="parent" layout="@layout/movie_divide" />
    <TextView android:textSize="@dimen/photo_movie_edit_bottom_btn_size" android:textColor="@color/movie_tab_normal" android:ellipsize="marquee" android:gravity="center" android:id="@id/btn_movie_return" android:paddingBottom="@dimen/movie_editor_btn_movie_save_padding_start" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxWidth="@dimen/photo_movie_edit_bottom_btn_save_max_width" android:text="@string/movie_return" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" android:paddingStart="@dimen/photo_movie_edit_btn_movie_return_margin_start" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <RadioGroup android:gravity="center" android:orientation="horizontal" android:id="@id/duration_group_controller" android:paddingBottom="@dimen/movie_editor_duration_group_controller_padding_start" android:layout_width="wrap_content" android:layout_height="fill_parent" android:paddingStart="@dimen/movie_editor_duration_group_controller_padding_start" app:layout_constrainedHeight="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <RadioButton android:id="@id/radio_button_video_short" android:layout_width="@dimen/movie_editor_time_item_width" android:checked="true" android:minWidth="@dimen/movie_editor_time_item_min_width" android:text="@string/movie_video_short" style="@style/smallMovieRadioButton" />
        <RadioButton android:id="@id/radio_button_video_long" android:layout_width="@dimen/movie_editor_time_item_width" android:minWidth="@dimen/movie_editor_time_item_min_width" android:text="@string/movie_video_long" android:paddingStart="@dimen/movie_editor_radio_button_video_long_padding_start" style="@style/smallMovieRadioButton" />
    </RadioGroup>
    <TextView android:textSize="@dimen/photo_movie_edit_bottom_btn_size" android:textColor="@color/movie_tab_normal" android:ellipsize="marquee" android:gravity="center" android:id="@id/btn_movie_save" android:paddingBottom="@dimen/movie_editor_btn_movie_save_padding_start" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxWidth="@dimen/photo_movie_edit_bottom_btn_save_max_width" android:text="@string/movie_save" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" android:paddingEnd="@dimen/photo_movie_edit_btn_movie_return_margin_start" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>