<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/extra_content" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="@dimen/photo_movie_edit_preview_btn_text_size" android:textColor="@color/compare_btn_color" android:gravity="center" android:id="@id/preview_btn" android:background="@drawable/btn_beauty_compare" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/photo_movie_edit_delete_margin_end" android:minWidth="@dimen/photo_movie_edit_preview_btn_width" android:minHeight="@dimen/photo_movie_edit_preview_btn_height" android:text="@string/movie_preview_btn" android:singleLine="true" android:layout_alignParentTop="true" android:layout_marginEnd="@dimen/photo_movie_edit_delete_margin_end" android:layout_alignParentEnd="true" />
        <ImageView android:id="@id/iv_play" android:visibility="gone" android:layout_width="@dimen/photo_movie_play_btn_width" android:layout_height="@dimen/photo_movie_play_btn_width" android:src="@drawable/video_play_icon" android:scaleType="centerCrop" android:layout_centerInParent="true" android:contentDescription="@string/movie_content_describe_play" />
        <com.miui.gallery.movie.ui.view.StrokeTextView android:textSize="@dimen/movie_tv_size_middle" android:textColor="@color/movie_white" android:id="@id/tv_movie_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/movie_duration_bottom" android:layout_alignParentBottom="true" android:layout_marginEnd="@dimen/movie_duration_right" android:layout_alignParentEnd="true" />
        <ImageView android:id="@id/iv_movie_delete" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/photo_movie_edit_delete_margin_end" android:src="@drawable/movie_selector_delete" android:layout_alignParentBottom="true" android:contentDescription="@string/movie_content_describe_delete" android:layout_marginEnd="@dimen/photo_movie_edit_delete_margin_end" android:layout_alignParentEnd="true" />
        <com.miui.gallery.movie.ui.view.PlayProgressView android:id="@id/play_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/movie_view_progress_height" android:layout_marginBottom="@dimen/movie_view_progress_margin_bottom" android:layout_alignParentBottom="true" />
        <include layout="@layout/common_loading_progress_bar" />
    </RelativeLayout>
</merge>