<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/screen_root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/screen_root_layout_bg" android:background="@color/screen_editor_view_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <include layout="@layout/screen_share_top_layout" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/screen_edit_top_layout" android:background="@color/transparent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/screen_editor_top_height" android:alpha="0.0" app:layout_constraintBottom_toTopOf="@id/top_guide_line" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="@dimen/screen_editor_cancel_btn_txt_size" android:textColor="@color/photo_editor_text_button_color" android:gravity="center" android:id="@id/screen_delete" android:layout_width="@dimen/screen_editor_top_text_width" android:layout_height="@dimen/screen_editor_top_height" android:text="@string/screen_editor_btn_delete" android:lines="1" android:layout_marginStart="@dimen/screen_editor_cancel_btn_margin_start" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/screen_editor_cancel_btn_txt_size" android:textColor="@color/photo_editor_text_button_color" android:gravity="center" android:id="@id/screen_finish" android:layout_width="@dimen/screen_editor_top_text_width" android:layout_height="@dimen/screen_editor_top_height" android:text="@string/screen_editor_btn_save" android:lines="1" android:layout_marginEnd="@dimen/screen_editor_cancel_btn_margin_start" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_vertical_50" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
        <ImageView android:enabled="false" android:id="@id/operation_revoke" android:layout_width="@dimen/screen_editor_revert_icon_width" android:layout_height="@dimen/screen_editor_top_height" android:src="@drawable/editor_menu_undo" android:scaleType="centerInside" android:contentDescription="@string/photo_editor_talkback_undo" android:layout_marginEnd="@dimen/screen_editor_revert_icon_margin" app:layout_constraintEnd_toStartOf="@id/guideline_vertical_50" />
        <ImageView android:enabled="false" android:id="@id/operation_revert" android:layout_width="@dimen/screen_editor_revert_icon_width" android:layout_height="@dimen/screen_editor_top_height" android:src="@drawable/editor_menu_redo" android:scaleType="centerInside" android:contentDescription="@string/photo_editor_talkback_redo" android:layout_marginStart="@dimen/screen_editor_revert_icon_margin" app:layout_constraintStart_toEndOf="@id/guideline_vertical_50" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/top_guide_line" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/screen_editor_top_height" />
    <FrameLayout android:id="@id/share_view_layout" android:background="@color/transparent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/share_bottom_guide_line" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/share_top_guide_line">
        <com.miui.gallery.editor.photo.screen.home.ScreenShareView android:id="@id/share_view" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
    <FrameLayout android:id="@id/screen_editor_layout" android:background="@color/screen_editor_transparent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/bottom_guide_line" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/top_guide_line" />
    <FrameLayout android:id="@id/screen_longcrop_layout" android:background="@color/screen_editor_transparent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/bottom_guide_line" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/top_guide_line" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/share_top_guide_line" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/screen_editor_share_mode_top_guideline_begin" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/menu_top_guide_line" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/screen_editor_menu_top_guideline_end" />
    <FrameLayout android:id="@id/screen_menu_layout" android:background="@color/screen_editor_menu_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/menu_bottom_guide_line" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/menu_top_guide_line" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/menu_bottom_guide_line" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/screen_editor_menu_bottom_guideline_end" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/bottom_guide_line" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/screen_editor_edit_mode_bottom_guideline_end" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/share_bottom_guide_line" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/screen_editor_share_mode_bottom_guideline_end" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/common_base_guide_line" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/screen_editor_base_guideline_end" />
    <FrameLayout android:id="@id/bottom_area_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:alpha="0.0" app:layout_constraintTop_toBottomOf="@id/bottom_guide_line" />
</androidx.constraintlayout.widget.ConstraintLayout>